integration_tests/tests/integration_tests/snapshots/integration_tests__fungible_tests__fungible_balance_overflow-search-assets.snap
---
source: integration_tests/tests/integration_tests/fungible_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 1,
  "limit": 1000,
  "cursor": "drakjG26NLi2QkHzsmok6ei79VDYWVGR3eG8USzxGHb",
  "items": [
    {
      "interface": "FungibleToken",
      "id": "drakjG26NLi2QkHzsmok6ei79VDYWVGR3eG8USzxGHb",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "",
        "files": [],
        "metadata": {},
        "links": {}
      },
      "authorities": [],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "token",
        "owner": "24Bx3re6nMwxyyD6DA6AWtxzxwNhEm5AhwcRBPJtHSrY"
      },
      "supply": null,
      "mutable": true,
      "burnt": false,
      "token_info": {
        "token_accounts": [
          {
            "address": "7o2RFDQYTEHGn6c8Dd1oCmuHxej9Bib8Wbrp3UBoiR7e",
            "balance": 17293822569102704615
          }
        ],
        "balance": 17293822569102704615,
        "supply": 18446744073709551615,
        "decimals": 9,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "associated_token_address": "7o2RFDQYTEHGn6c8Dd1oCmuHxej9Bib8Wbrp3UBoiR7e",
        "mint_authority": "ycryZfB1DFrtJ4HqRKH2fsSqzGznfD4cLsYFt5iJcec"
      }
    }
  ]
}
