integration_tests/tests/integration_tests/snapshots/integration_tests__fungible_tests__fungible_get_metadata.snap
---
source: integration_tests/tests/integration_tests/fungible_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "interface": "FungibleToken",
  "id": "E851Na3ojPNUuD1MCuA6ARYQ4ez2oXdE4wDp4UsRatcT",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://bafkreigtyahyhqylq5v2uou34xbsrmqdgkx3pszxpu2icrdfursbwtxdsm.ipfs.nftstorage.link",
    "files": [],
    "metadata": {
      "name": "TT",
      "symbol": "TT",
      "token_standard": "Fungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "B72HPagpUXJ52dqCoqhCvUjgkcFPtnTES1YD1nur97LB",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "token",
    "owner": ""
  },
  "supply": null,
  "mutable": true,
  "burnt": false,
  "token_info": {
    "supply": 1000000000000000,
    "decimals": 6,
    "token_program": "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
    "mint_authority": "B72HPagpUXJ52dqCoqhCvUjgkcFPtnTES1YD1nur97LB",
    "freeze_authority": "B72HPagpUXJ52dqCoqhCvUjgkcFPtnTES1YD1nur97LB"
  }
}
